<?xml version="1.0"?>
<package>
  <name>vec2odo</name>
  <version>0.1.0</version>
  <description>The vec2odo package</description>

  <maintainer email="bcoudrin@laas.fr">Benjamin Coudrin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>
